--- a/Michus/wwwroot/assets/css/DescuentoStyle.css
+++ b/Michus/wwwroot/assets/css/DescuentoStyle.css
@@ -215,8 +215,46 @@ input {
     display: none;
 }
 
-    input:checked + label {
-        margin-left: 22px;
-        margin-top: -1px;
-        background: #47c;
+
+
+
+.custom-modal {
+    display: none; /* Inicialmente está oculto */
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Fondo semi-transparente */
+    justify-content: center;
+    align-items: center;
+}
+
+.modal-content {
+    background-color: white;
+    padding: 20px;
+    border-radius: 10px;
+    position: relative;
+}
+
+.close-modal, .close-details-modal {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 20px;
+    cursor: pointer;
+    color: #333; /* Color visible para el texto */
+}
+
+.close-details-button {
+    margin-top: 10px;
+    padding: 10px;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    cursor: pointer;
+}
+
+    .close-details-button:hover {
+        background-color: #0056b3;
     }
